--- a/teamMateApp/templates/teamMateApp/layout.html
+++ b/teamMateApp/templates/teamMateApp/layout.html
@@ -14,7 +14,7 @@
         
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="{% url 'index' %}">TeamMate</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" wfd-invisible="true">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -22,7 +22,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
+                        <a class="nav-link" href="{% url 'dashboard' %}"><strong>{{ user.username }}</strong></a>
                     </li>
                     {% endif %}
                     <li class="nav-item">
@@ -30,10 +30,7 @@
                     </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Following</a>
+                            <a class="nav-link" href="{% url 'following'%}">Following</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link LogOut_Link" href="{% url 'logout' %}">Log Out</a>
