--- a/teamMateApp/templates/teamMateApp/following.html
+++ b/teamMateApp/templates/teamMateApp/following.html
@@ -11,4 +11,6 @@
         </div>
     </div>
         <script src="{% static 'teamMateApp/json/loadData.js' %}"></script>
+        <script src="{% static 'teamMateApp/json/request.js' %}"></script>
+
  {% endblock %}
