--- a/teamMateApp/templates/teamMateApp/layout.html
+++ b/teamMateApp/templates/teamMateApp/layout.html
@@ -53,5 +53,7 @@
           {% endblock %}
 
         <script src="{% static 'teamMateApp/json/bootstrap.min.js' %}" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+        <script src="{% static 'teamMateApp/json/cookie.js' %}"></script>
+
     </body>
  </html>
