--- a/teamMateApp/templates/teamMateApp/posts.html
+++ b/teamMateApp/templates/teamMateApp/posts.html
@@ -38,8 +38,8 @@
                         {% endif %}
 
                         <li class="list-inline-item"> 
-                            <a href=""><img src="https://img.icons8.com/ios/50/000000/plus.png"
-                                width="30" height="30 " class="more"></a>
+                            <a data-teamId ="{{team.team_id}}"><img src="https://img.icons8.com/ios/50/000000/plus.png"
+                                width="30" height="30 " class="team_request"></a>
                         </li>
                     </ul>
             </div>
