--- a/teamMateApp/templates/teamMateApp/profile.html
+++ b/teamMateApp/templates/teamMateApp/profile.html
@@ -60,8 +60,8 @@
           </div>
       </div>
       <script src="{% static 'teamMateApp/json/loadData.js' %}"></script>
-      <script src="{% static 'teamMateApp/json/cookie.js' %}"></script>
       <script src="{% static 'teamMateApp/json/profile.js' %}"></script>
+      <script src="{% static 'teamMateApp/json/request.js' %}"></script>
 
 </div>  
 
