--- a/teamMateApp/templates/teamMateApp/dashboard.html
+++ b/teamMateApp/templates/teamMateApp/dashboard.html
@@ -3,118 +3,117 @@
 
 {% block styles %}
   <link rel="stylesheet" href="{% static 'teamMateApp/style/dashboard.css' %}">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 {% endblock %}
 
 {% block body %}
-<div class="container">
-  <!-- <div class="alert">
-    <span class="closebtn">&times;</span>  
-    <strong>NOTE!</strong> Please verify your account. <a href="#" style="color:#7ed321;">Resend Verification Code</a>
-  </div> -->
-  <table class="mb-5">
-  <tr>
-  <td>
-  <section>
-  <label for="fileToUpload">
-  <i class="fa fa-camera"></i>
-  <input type="file" id="fileToUpload" style="visibility:hidden;" accept=".png,.jpg,jpeg,.PNG,.JPEG" name="fileToUpload" onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])">
-  </label>
-  <img src="/Img/13.jpg" id="blah" alt="Avatar">
-  </section>
-  <!-- <h1>Bharadwaj</h1>
-  <h3>Web Designer & Developer</h3> -->
-  </td>
-  <td>
-  <ul>
-  <li><b>Full name</b> 
-    <input type="text" name="fname" id="fname" maxlength="100" value="Bharadwaj" required /> 
-    <i class="fa fa-edit" id="edit1" onclick="document.getElementById('fname').style.pointerEvents='auto';document.getElementById('fname').focus();this.style.display='none'; document.getElementById('check1').style.display='inline-block';"></i> <i class="fa fa-check" style="display:none;" id="check1" onclick="document.getElementById('edit1').style.display='inline-block';this.style.display='none';document.getElementById('fname').style.pointerEvents='none';"></i></li>
-  <li><b>Email</b>
-     <input type="email" name="email" id="email" maxlength="150" value="Bharadwajyl@gmail.com" required />
-    </li>
-  <li><b>Contact number</b> 
-    <input type="tel" name="mobile" id="mobile" maxlength="10" value="0123456789" required /> 
-    <i class="fa fa-edit" id="edit2" onclick="document.getElementById('mobile').style.pointerEvents='auto';document.getElementById('mobile').focus();this.style.display='none'; document.getElementById('check2').style.display='inline-block';"></i> <i class="fa fa-check" style="display:none;" id="check2" onclick="document.getElementById('edit2').style.display='inline-block';document.getElementById('mobile').style.pointerEvents='none';this.style.display='none';"></i></li>
-  <li><b>Address</b> 
-    <input type="text" name="txt" id="txt" maxlength="250" value="Street, Pincode, Province/State, Country" required /> 
-    <i class="fa fa-edit" id="edit3" onclick="document.getElementById('address').style.pointerEvents='auto';document.getElementById('address').focus();this.style.display='none'; document.getElementById('check3').style.display='inline-block';"></i> <i class="fa fa-check" style="display:none;" id="check3" onclick="document.getElementById('edit3').style.display='inline-block';document.getElementById('address').style.pointerEvents='none';this.style.display='none';"></i></li>
-  </ul>
-  </td>
-  </tr>
-  <button class="btn" style="width:100px;">Edit</button>
-</table>
+<div class="container av-dashboard">
+    <div class="row">
+    
+    <div class="col-lg-3 col-md-3 col-sm-12">
+    <div class="card">
+    <div class="card-body">
+        <div class="card-img">
+        <span><i>H</i></span>
+        </div>
+        <h4>hamide zarabi</h4>
+        <ul>
+            <li><a class="add-team" style="cursor: pointer;"><i class="fas fa-user-edit"></i>add Team</a></li>
+            <li><a class="edit_profile"  style="cursor: pointer;"><i class="fas fa-user-edit"></i>Edit Profile</a></li>
+            <li><a class="team_requests"  style="cursor: pointer;"><i class="fas fa-users"></i>requests</a></li>
+        </ul>
+    </div>
+    </div>
+    </div>
+    
+    <div class="col-lg-9 col-md-9 col-sm-12">
+            <div class="dashboard_form">
+                <div class="card-body">
+               <div id="add-team">
+                    <h3>Add Team</h3>
+                    <form method="post">
+                        <div class="form-row">
+                        <div class="form-group col-md-6  mt-3">
+                            <label for="inputEmail4">Title</label>
+                            <input type="text" class="form-control" name="Title" id="Title" placeholder="Title">
+                        </div>
+                        <div class="form-group col-md-6  mt-3">
+                            <label for="inputPassword4">Number Of Participants</label>
+                            <input type="text" class="form-control" id="participantsNO" name="participantsNO" placeholder="Number Of Participants">
+                        </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6  mt-3">
+                            <label for="inputEmail4">Startdate</label>
+                            <input type="datetime-local" class="form-control" name="startdate" id="startdate" placeholder="">
+                            </div>
+                            <div class="form-group col-md-6  mt-3">
+                            <label for="inputPassword4">Finishdate</label>
+                            <input type="datetime-local" class="form-control" id="finishdate" name="finishdate" placeholder="">
+                            </div>
+                        </div>
+                        <div class="form-group  mt-3">
+                        <label for="inputAddress">content</label>
+                        <textarea type="text" class="form-control" id="content" name="content" placeholder=""></textarea>
+                        </div>
+                        <div class="form-group mt-3">
+                        <label for="inputAddress2">uoload team image</label>
+                        <input type="file" name="image" class="form-control"  id="image" accept=".jpg,.JPG,.png,.PNG,.jpeg,.JPEG" required />
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-5">Create</button>
+                    </form>                                       
+                </div>
 
-<table>
-  <tr>
-  <td class="section2">
-  <h2 style="text-align:left;">PUBLISH YOUR Team</h2>
-  <ul>
-    <li>
-      <label for="title">Title</label>
-      <input type="text" id="title" name="title" placeholder="eg:Farm Tomoto" maxlength="30" required="" />
-      </li>
-  <li>
-  <label for="productimage">Upload Your Product Picture</label>
-  <input type="file" name="productimage" id="productimage" accept=".jpg,.JPG,.png,.PNG,.jpeg,.JPEG" required />
-  </li>
- 
-  <li>
-  <label for="tags">Number Of Participants</label>
-  <input type="text" id="text" name="text" placeholder="eg:tomoto,brinjal,onions" maxlength="50" required="" />
-  </li>
-  <li>
-  <label for="Finished">Finished</label>
-    <select name="Finished">
-    <option value="1">Yes</option>
-    <option value="0">No</option>
-    </select>
-   </li>
-  <li>
-    <label for="description">Description</label>
-    <textarea id="description" name="description" placeholder="Tell something about your product" maxlength="250" required="" ></textarea>
-    </li>
+                <div id="edit_profile" class="invisible">
+                    <h3>Edit Profile</h3>
+                    <form method="post">
+                        <div class="form-row">
+                        <div class="form-group col-md-6  mt-3">
+                            <label for="inputEmail4">first name</label>
+                            <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name">
+                        </div>
+                        <div class="form-group col-md-6  mt-3">
+                            <label for="inputPassword4">last name</label>
+                            <input type="text" class="form-control" id="last_name" name="last_name" placeholder="last name">
+                        </div>
+                        </div>
+                        <div class="form-group  mt-3">
+                        <label for="inputAddress">Info</label>
+                        <textarea type="text" class="form-control" id="Info" name="Info" placeholder=""></textarea>
+                        </div>
+                        <div class="form-group mt-3">
+                        <label for="inputAddress2">upload your image</label>
+                        <input type="file" name="image" class="form-control"  id="image" accept=".jpg,.JPG,.png,.PNG,.jpeg,.JPEG" required />
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-5">Update</button>
+                    </form>
+                </div>
+                <div id="team_requests" class="invisible">
+                    <h3>team1</h3>
+                    <div class="alert alert-dark" role="alert">
+                        This is a dark alert—check it out!
+                        <button type="button"  style="float: right;" class="btn btn-success">
+                            Accept
+                        </button>
+                    </div>
+                    <div class="alert alert-dark" role="alert">
+                        This is a dark alert—check it out!
+                        <button type="button"  style="float: right;" class="btn btn-success">
+                            Accept
+                        </button>
+                    </div>
+                    <div class="alert alert-dark" role="alert">
+                        This is a dark alert—check it out!
+                        <button type="button"  style="float: right;" class="btn btn-success">
+                            Accept
+                        </button>
+                    </div>
+                </div>
+                </div>
+              </div>
 
-  </ul>
-  <button class="btn" style="width:100px;">SUBMIT</button>
-  </td>
-  <td class="inframe">
-  <h2>PRODUCTS IN FRAME</h2>
-  <div class="card">
-  <img src="https://i.ibb.co/pwHsGgc/01.jpg" alt="NO PREVIEW">
-  <section class="card_content">
-  <h3>Tomoto</h3>
-  <ul>
-  <li><b>Published Date: </b>12/05/2021</li>
-  <li><b>Quantity: </b><input type="tel" name="updatequantity" id="updatequantity" value="1500" required/> <i class="fa fa-edit" id="uedit1" onclick="document.getElementById('updatequantity').style.pointerEvents='auto';document.getElementById('updatequantity').focus();this.style.display='none'; document.getElementById('ucheck1').style.display='inline-block';"></i> <i class="fa fa-check" style="display:none;" id="ucheck1" onclick="document.getElementById('uedit1').style.display='inline-block';document.getElementById('updatequantity').style.pointerEvents='none';this.style.display='none';"></i></li>
-  <li><b>Quantity In Supply: </b>300KG</li>
-  <li><b>Price: </b><input type="tel" name="updateprice" id="updateprice" value="40" required/> <i class="fa fa-edit" id="uedit2" onclick="document.getElementById('updateprice').style.pointerEvents='auto';document.getElementById('updateprice').focus();this.style.display='none'; document.getElementById('ucheck2').style.display='inline-block';"></i> <i class="fa fa-check" style="display:none;" id="ucheck2" onclick="document.getElementById('uedit2').style.display='inline-block';document.getElementById('updateprice').style.pointerEvents='none';this.style.display='none';"></i></li>
-  </ul>
-  <button class="btn">UPDATE</button> <button class="btn" style="background:#960c06;">DELETE</button>
-  </section>
-  </div>
-  </td>
-  </tr>
-  </table>
-  </div>
-  
-  
-  <!--JAVASCRIPT-->
-  <script src="js/custom.js"></script>
-  <script>
-  function editdetails2(){
-  }
-  
-  var close = document.getElementsByClassName("closebtn");
-  var i;
-  
-  for (i = 0; i < close.length; i++) {
-    close[i].onclick = function(){
-      var div = this.parentElement;
-      div.style.opacity = "0";
-      setTimeout(function(){ div.style.display = "none"; }, 600);
-    }
-  }
-  </script>
-            
-  {% endblock %}
+    </div>
+    </div>
+    </div>
+    <script src="{% static 'teamMateApp/json/dashboard.js' %}"></script>
+
+    {% endblock %}
