--- a/teamMateApp/templates/teamMateApp/participants.html
+++ b/teamMateApp/templates/teamMateApp/participants.html
@@ -7,6 +7,9 @@
 
 {% block body %}
     <div class="container" id="ccMembers">
+        <div class="heading-with-text text-left col-12 mt-5">
+            <h2>&zwj;{{team_title}} <span>Members</span></h2>
+        </div>
         <div class="row w-100 mt-5">
             {% for participant in participants %}
             <div class="col-2 text-center mb-3">
