--- a/teamMateApp/templates/teamMateApp/posts.html
+++ b/teamMateApp/templates/teamMateApp/posts.html
@@ -4,16 +4,16 @@
     <div class="card-group col-sm-3">
         <div class="card text-center border-dark m-3">
             <a class="group_img"> 
-            <img class="card-img-top" src="{% static 'teamMateApp/img/'  %}{{team.image}}" alt="Card image cap">
+            <img class="card-img-top" src="{{team.image}}" alt="Card image cap">
             </a>                    
             <a class="main-avatar" href="{% url 'profile' team.user_id %}" >
-                <img alt="" width="50" height="50" src="{% static 'teamMateApp/img/'  %}{{team.createuser_image}}" class="avatar">
+                <img alt="" width="50" height="50" src="{{team.createuser_image}}" class="avatar">
             </a>
             <div class="card-body">
                 <h5 class="card-title">{{team.title}}</h5>
                 <p class="card-text">{{team.content}}</p>
-                <p class="card-text"><small>Startdate : </small><small class="text-muted">{{team.startdate}}</small></p>
-                <p class="card-text"><small>Finishdate : </small><small class="text-muted">{{team.finishdate}}</small></p>
+                <p class="card-text"><small>Startdate : </small><small class="text-muted">{{team.startdate|date:'Y-m-d H:i:s'}}</small></p>
+                <p class="card-text"><small>Finishdate : </small><small class="text-muted">{{team.finishdate|date:'Y-m-d H:i:s'}}</small></p>
 
             </div>
             <div class="card-footer">
@@ -21,7 +21,7 @@
                         {% for participant in team.participants %}
                         <li class="list-inline-item"> 
                             <a href="{% url 'profile' participant.user.id %}">
-                                <img src="{% static 'teamMateApp/img/'  %}{{participant.user.image.url}}"
+                                <img src="{{participant.user.image.url}}"
                                 alt="DP" class="rounded-circle img-fluid">
                             </a>
                         </li>
