--- a/teamMateApp/templates/teamMateApp/profile.html
+++ b/teamMateApp/templates/teamMateApp/profile.html
@@ -13,7 +13,7 @@
       <div class="blog-author">
         <div class="blog-author-image">
           <div class="blog-author-image-card">
-          <img src="{% static 'teamMateApp/img/' %}{{user_info.image.url}}" alt="{{user_info.username}}">
+          <img src="{{user_info.image.url}}" alt="{{user_info.username}}">
           </div>
         </div>
         <div class="blog-author-content">
