--- a/teamMateApp/templates/teamMateApp/layout.html
+++ b/teamMateApp/templates/teamMateApp/layout.html
@@ -54,6 +54,7 @@
 
         <script src="{% static 'teamMateApp/json/bootstrap.min.js' %}" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
         <script src="{% static 'teamMateApp/json/cookie.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.6.15/dist/sweetalert2.all.min.js"></script>
 
     </body>
  </html>
