--- a/teamMateApp/static/teamMateApp/style/style.css
+++ b/teamMateApp/static/teamMateApp/style/style.css
@@ -132,3 +132,13 @@ body{
     cursor: pointer;
 }
 
+/* .circle {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  background: #ffc107;
+  border: 2px solid #fafafa;
+  color: #000 !important;
+  text-align: center;
+} */
