--- a/teamMateApp/templates/teamMateApp/participants.html
+++ b/teamMateApp/templates/teamMateApp/participants.html
@@ -15,7 +15,7 @@
             <div class="col-2 text-center mb-3">
                 <div class="cc-member-card">
                 <a href="{% url 'profile' participant.user.id %}">
-                <img src="{% static 'teamMateApp/img/'  %}{{participant.user.image.url}}" alt="image">
+                <img src="{{participant.user.image.url}}" alt="image">
                 <p>
                 {{participant.user.username}}
                 </p>
