--- a/teamMateApp/templates/teamMateApp/posts.html
+++ b/teamMateApp/templates/teamMateApp/posts.html
@@ -14,6 +14,7 @@
                 <p class="card-text">{{team.content}}</p>
                 <p class="card-text"><small>Startdate : </small><small class="text-muted">{{team.startdate|date:'Y-m-d H:i:s'}}</small></p>
                 <p class="card-text"><small>Finishdate : </small><small class="text-muted">{{team.finishdate|date:'Y-m-d H:i:s'}}</small></p>
+                <p class="card-text"><small>participants number : </small><small class="text-muted circle">{{team.participantsNO}}</small></p>
 
             </div>
             <div class="card-footer">
@@ -37,10 +38,12 @@
                         </li>
                         {% endif %}
 
+                        {% if team.owner == False and team.remains != 0 %}
                         <li class="list-inline-item"> 
-                            <a data-teamId ="{{team.team_id}}"><img src="https://img.icons8.com/ios/50/000000/plus.png"
+                            <a data-teamId ="{{team.team_id}}"><img src="{% static 'teamMateApp/icon/plus.png' %}"
                                 width="30" height="30 " class="team_request"></a>
                         </li>
+                        {% endif %}
                     </ul>
             </div>
         </div>
