--- a/teamMateApp/templates/teamMateApp/following.html
+++ b/teamMateApp/templates/teamMateApp/following.html
@@ -3,7 +3,7 @@
 
 {% block body %}
    
-    <div data-url="{% url 'following_posts'%}" id="posts">
+    <div data-url="{% url 'following_teams'%}" id="posts">
        
     </div>
     <div id="spinner-box" class="d-flex justify-content-center invisible m-5">
