--- a/teamMateApp/templates/teamMateApp/register.html
+++ b/teamMateApp/templates/teamMateApp/register.html
@@ -10,7 +10,7 @@
         <div class="flex-div">
           <div class="name-content">
             <h1 class="logo">TeamMate</h1>
-            <p>Connect with friends and the world around you on Facebook.</p>
+            <p> make a difference and become a TeamMate on TeamMate </p>
           </div>
             <form action="{% url 'register' %}" method="post">
               {% csrf_token %}
