--- a/teamMateApp/templates/teamMateApp/teams.html
+++ b/teamMateApp/templates/teamMateApp/teams.html
@@ -38,7 +38,7 @@
                         </li>
                         {% endif %}
 
-                        {% if team.owner == False and team.remains != 0 and team.authenticated %}
+                        {% if team.owner == False and team.remains != 0 and team.authenticated and team.isFinished == False %}
                         <li class="list-inline-item"> 
                             <a data-teamId ="{{team.team_id}}"><img src="{% static 'teamMateApp/icon/plus.png' %}"
                                 width="30" height="30 " class="team_request"></a>
