--- a/teamMateApp/templates/teamMateApp/dashboard.html
+++ b/teamMateApp/templates/teamMateApp/dashboard.html
@@ -77,5 +77,19 @@
     </div>
     </div>
     <script src="{% static 'teamMateApp/json/dashboard.js' %}"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    
+    
+    <script>
+        window.addEventListener("DOMContentLoaded", function () {
+            flatpickr(".datetimefield", {
+                enableTime: true,
+                enableSeconds: true,
+                dateFormat: "Y-m-d H:i:S",
+            });
+        });
 
+    </script>
+    
     {% endblock %}
